--- a/index.qmd
+++ b/index.qmd
@@ -17,10 +17,10 @@ about:
       href: https://github.com/ElijahMeyer3
     - icon: bar-chart-line-fill
       text: Currently Teaching
-      href: https://st511-01.github.io/st511-f24-01/
+      href: https://st295.github.io/st295-sp25/
 ---
 
-I am a postdoc in the [Department of Statistical Science](https://stat.duke.edu/) at Duke University, working with [Dr. Mine Çetinkaya-Rundel](https://mine-cr.com) on data science education, with responsibilities as a lead instructor and researcher. I have training and over nine years of experience in both developing and instructing in-person and online courses in statistics and data science that range from 15 to 300 students.
+I am a Teaching Assistant Professor in the [Department of Statistics](https://statistics.sciences.ncsu.edu/) at North Carolina State University, with responsibilities in teaching, TA training, curricula development, program development, and research. I have training and 10+ of experience in both developing and instructing in-person and online courses in statistics and data science that range from 15 to 300 students.
 
 My current research focuses on how to better the teaching and learning experiences for those involved. Additionally, I'm interested in sports analytics and creating dynamic tools to support data driven decision making as well as in developing statistics and data science curricula for both introductory and more advanced courses.
 
