--- a/publications.qmd
+++ b/publications.qmd
@@ -24,4 +24,10 @@ title: "Publications"
 Curriculum and Pedagogy. To be submitted to the Journal of Statistics and Data Science
 Education.
 
+## Reviewer 
 
+I have served as a reviewer for:
+
+-- Teaching Statistics (2024; 2025)
+
+-- Journal of Data Science (2024)
